# dyson

./: .editorconfig  README.md  Tiltfile
.github/workflows/: api-build.yaml  director-build.yaml  frontend-build.yaml  frontend-ci.yaml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Tiltfile
api/.cargo/: config.toml
api/prisma/: schema.prisma
api/prisma-cli/: Cargo.toml
api/prisma/migrations/20230718040035_init/: migration.sql
api/src/: config.rs  errors.rs  main.rs  migrations.rs  models.rs  server.rs  shutdown.rs  spec.rs  webhooks.rs
api/src/axum/extractors/: mod.rs  prediction.rs  user.rs
api/src/routes/: auth.rs  docs.rs  mod.rs  system.rs
api/src/routes/v1/: mod.rs
director/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Tiltfile
director/src/: director.rs  health_check.rs  main.rs  state.rs
director/src/server/: errors.rs  mod.rs
director/src/server/routes/: mod.rs  queue_suffix.rs  webhook.rs
frontend/: .dockerignore  .prettierrc.js  Dockerfile  Dockerfile.dev  Dockerfile.prisma  Tiltfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: instrumentation.ts  middleware.ts
frontend/src/app/: client-layout.tsx  layout.tsx  page.tsx
frontend/src/app/(boxed)/: layout.tsx  page.tsx
frontend/src/app/(boxed)/auth/: route.ts
frontend/src/app/(boxed)/auth/login/: page.tsx
frontend/src/app/(boxed)/auth/login/api/: route.ts
frontend/src/app/(boxed)/auth/register/: page.tsx
frontend/src/app/(boxed)/auth/register/api/: route.ts
frontend/src/app/components/: Logo.tsx
frontend/src/app/components/icons/: GitHub.tsx
frontend/src/app/dashboard/: NavBar.tsx  layout.tsx  page.tsx
frontend/src/app/dashboard/users/: page.tsx
frontend/src/db/: schema.prisma
frontend/src/db/migrations/20230617162944_init/: migration.sql
frontend/src/lib/: consts.ts  icons.tsx  session.ts  utils.ts
infra/: Makefile  README.md  api.yaml  db.yaml  director.yaml  frontend.yaml  namespace.yaml  redis.yaml
infra/_setup/cloudflare/: cf-secret.yaml
infra/_setup/rancher/: rancher-cert.yaml
infra/cloudflare/: cf-issuer.yaml
