[package]
publish = false
edition = "2021"
version = "0.0.0"
name = "dyson-api"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
dotenvy = "0.15.7"
serde_json = "1.0.104"
url = { version = "2.4.0", features = ["serde"] }
aide = { version = "0.11.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
ensemble = { version = "0.0.3", features = ["postgres"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
axum = { version = "0.6.19", features = ["headers", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
schemars = { version = "0.8.12", features = ["url", "chrono", "uuid1"] }
redis = { version = "0.23.1", features = [
	"aio",
	"tokio-comp",
	"connection-manager",
] }


[build-dependencies]
chrono = "0.4.26"
